--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>theo-waldermann.de</title>
     <style>
         body {
-            background-color: black;
+           background-color: black;
         }
+
         h1 {
             font-size: 12rem;
         }
@@ -20,5 +21,12 @@
 <body>
     <h1>Theo Waldermann</h1>    
     <div id="box"></div>
+    <h2>Ich bin Theo, noch 15 Jahre alt, ich spiele gerne Fußball und Videospiele...</h2>
+    <button onclick="function1()">Das ist meine Lieblingswebsite</button>
+    <script>
+        function function1() {
+            window.location.href="https://www.freeslots.com/de/"
+        }
+    </script>
 </body>
 </html>
