--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>theo-waldermann.de</title>
     <style>
         body {
-           background-color: black;
+           background-image: url(https://img.pikbest.com/ai/illus_our/20230426/93edb31f1b75422132d82c69c6a5de02.jpg!w700wp);
         }
 
         h1 {
